hphp/hack/test/typecheck/array_map1.php.exp
File "array_map1.php", line 4, characters 3-15:
Too few arguments (Typing[4104])
File "builtins.hhi", line 55, characters 10-18:
Definition is here
